objects/gvp__Sales_Order_Item__c.object
<CustomObject>
    <description>Item name, quantity and price paid for all Sales Order Items</description>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <formula>gvp__Item__r.gvp__Label__r.gvp__Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Distributor_Repack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributor Repack?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__ERP_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ERP Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Extended_Price__c</fullName>
        <formula>ROUND(gvp__Price__c* gvp__Quantity__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Invoice_Discount__c</fullName>
        <label>Invoice Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Invoice_Item_Extended_Price__c</fullName>
        <label>Invoice Item Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Invoice_Item__c</fullName>
        <label>Invoice Item $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Invoice_Tax__c</fullName>
        <label>Invoice Tax $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Item_Depletion_Allowance__c</fullName>
        <label>Item Depletion Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <formula>gvp__Item__r.gvp__Label__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Order_Date__c</fullName>
        <formula>gvp__Sales_Order__r.gvp__Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Order_Item_Key__c</fullName>
        <externalId>true</externalId>
        <label>Order Item Key</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Order_Item_Line__c</fullName>
        <label>Order Item Line</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Order_Unit__c</fullName>
        <label>Order Unit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Price_Level_Native__c</fullName>
        <inlineHelpText>Used to discount pricing by Item level, or a custom price. Price will be adjusted after you click Save. This reflects the packaged text value (List, Level 2, Level 3, etc)</inlineHelpText>
        <label>Price (Level)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Price_Level__c</fullName>
        <inlineHelpText>Value of &quot;Custom Setting&quot; (text) for selected Price Level</inlineHelpText>
        <label>Price (Label)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Quantity_Per_Carton__c</fullName>
        <label>Quantity Per Carton</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>gvp__Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Items</relationshipLabel>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Supplier_Discount_Participation__c</fullName>
        <label>Supplier Discount Participation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Supplier_Provided_Promotion_Code__c</fullName>
        <label>Supplier Provided Promotion Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Item</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>gvp__Ordered_last_99_days</fullName>
        <columns>NAME</columns>
        <columns>gvp__Sales_Order__c</columns>
        <columns>gvp__Item__c</columns>
        <columns>gvp__Order_Date__c</columns>
        <columns>gvp__Order_Unit__c</columns>
        <columns>gvp__Price__c</columns>
        <columns>gvp__Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Ordered last 99 days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ORI-{0000000000}</displayFormat>
        <label>Sales Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>